@@ -1,4 +1,11 @@
-2005-08-04  Don Porter  <dgp@users.sourceforge.net>
+2005-08-08  Don Porter  <dgp@users.sourceforge.net>
+
+	[kennykb_numerics_branch]
+
+	* generic/tclObj.c:	Replaced some goto's with loops and started
+	use of BIGNUM_AUTO_NARROW and NO_WIDE_TYPE.
+
+2005-08-05  Don Porter  <dgp@users.sourceforge.net>
 
 	[kennykb_numerics_branch]
 	* generic/tclObj.c:	Rewrote Tcl_GetDoubleFromObj().
